service-manifest-for-nginx-app-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-nodeport-service-2
  labels:
    app: nginx-demo-app-2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /<healthcheck-path>
spec:
  type: NodePort
  ports:
    - name: mainport
      port: 80
      targetPort: 80
  selector:
    app: nginx-demo-app-2
