ingress-manifest-for-nginx-apps.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-context-path-routing-ingress
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # Ingress Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /<path-for-nginx-demo-app-1>
            pathType: Prefix
            backend:
              service:
                name: nginx-demo-nodeport-service-1
                port:
                  number: 80
          - path: /<path-for-nginx-demo-app-2>
            pathType: Prefix
            backend:
              service:
                name: nginx-demo-nodeport-service-2
                port:
                  number: 80
